# CausalKit

./: .gitignore  404.html  LICENSE  README.md  api.html  environment.yml  examples.html  genindex.html  index.html  mkdocs.yml  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  requirements-docs.txt  research.html  search.html  searchindex.js  setup.py  sitemap.xml  temp_script.py  test_data_generators.py  test_docs_build.py  test_installation.py  user-guide.html  verify_changes.py
.junie/: guidelines.md
_modules/: index.html
_sources/: index.md  index.rst.txt
api/: analysis.html  data.html  design.html  eda.html  inference.html  refutation.html
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
causalkit/: __init__.py
causalkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contributing/: index.html
docs/: Makefile  api.rst  conf.py  contributing.md  examples.md  examples.rst  git-guide.md  index.md  index.rst  make.bat  notebooks.rst  research.md  research.md.bak  user-guide.md  user-guide.rst
examples/: basic_example.html  causal_dataset_generator_examples.ipynb  causaldata.html  data generators.ipynb  data_functions_example.ipynb  datasets_benchmarks.html  design_functions_example.ipynb  dgp_benchmarking.html  dml_ate.html  dml_ate_test.html  dml_att.html  dml_att_refutation.html  dml_atte.html  eda_test.html  generators_notebook.ipynb  homogenity.ipynb  index.html  library_structure_improvements.md  obs_data_binary_t.ipynb  observational_binary_treatment.ipynb  rct_analysis.html  rct_analysis.ipynb  (+4 more)
(+467 files in other folders)
